cluster/kubernetes/external/qubt/ingress/qubt-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qubt
  namespace: external
spec:
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: qubt
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: qubt-web-svc
          port: 8080
